# mathamphetamine

./: .gitignore  LICENSE  README.md
NIST/: build.sh  makefile
NIST/experiments/: .gitignore
NIST/include/: generators.h
NIST/src/: CMakeLists.txt  approximateEntropy.c  assess.c  blockFrequency.c  cephes.c  cusum.c  dfft.c  discreteFourierTransform.c  frequency.c  generators.c  genutils.c  linearComplexity.c  longestRunOfOnes.c  matrix.c  nonOverlappingTemplateMatchings.c  overlappingTemplateMatchings.c  randomExcursions.c  randomExcursionsVariant.c  rank.c  runs.c  serial.c  universal.c  utilities.c
NIST/sts-2.1.2/: assess  makefile  templates.tar.xz
NIST/sts-2.1.2/experiments/AlgorithmTesting/: finalAnalysisReport.txt  freq.txt
NIST/sts-2.1.2/experiments/AlgorithmTesting/ApproximateEntropy/: results.txt  stats.txt
NIST/sts-2.1.2/experiments/AlgorithmTesting/BlockFrequency/: results.txt  stats.txt
NIST/sts-2.1.2/experiments/AlgorithmTesting/CumulativeSums/: data1.txt  data2.txt  results.txt  stats.txt
NIST/sts-2.1.2/experiments/AlgorithmTesting/FFT/: results.txt  stats.txt
NIST/sts-2.1.2/experiments/AlgorithmTesting/Frequency/: results.txt  stats.txt
NIST/sts-2.1.2/experiments/AlgorithmTesting/LinearComplexity/: results.txt  stats.txt
NIST/sts-2.1.2/experiments/AlgorithmTesting/LongestRun/: results.txt  stats.txt
NIST/sts-2.1.2/experiments/AlgorithmTesting/NonOverlappingTemplate/: data10.txt  data100.txt  (+147 more)
NIST/sts-2.1.2/include/: decls.h  utilities.h
NIST/sts-2.1.2/src/: CMakeLists.txt  assess.c
archives/: README.md
ent/: Makefile
(+42 files in other folders)
